# stm32ctl

./: README.rst  pyproject.toml  setup.py
stm32ctl/: __main__.py  args.py  client.py  connection.py  main.py
